<resources>
    <string name="app_name">Torre de Hanói</string>
    <string name="action_settings">Configurações</string>
    <string name="new_game">Novo Jogo</string>
    <string name="undo">Desfazer</string>
    <string name="solve">Solucionar</string>
    <string name="history">Histórico</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_user">Jogo e usuário</string>
    <string name="pref_disks_amount">Quantidade de Discos</string>
    <string name="pref_player_name">Nome do Jogador</string>
    <string name="pref_default_player_name">SEM NOME</string>
    <string name="pref_speed_effect">Velocidade do efeito</string>
    <string-array name="pref_list_speed_effect_values">
        <item>100</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_list_speed_effect_titles">
        <item>Normal</item>
        <item>Rápido</item>
    </string-array>
    <string-array name="pref_list_disks_amount">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="msg_start_auto_resolution">Iniciar auto-resolução do jogo</string>
    <string name="msg_wrong_movement">Movimento não permitido</string>
    <string name="msg_impossible_undo">Não é possível desfazer</string>
    <string name="msg_cannot_autosolve">Jogo iniciado, não é possível solucionar</string>
    <string name="msg_you_won">Você venceu!!!</string>
    <string name="ongoing">Em andamento</string>
    <string name="victory">Vitória</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
