<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/pref_title_user"
        android:key="title_user">
        <EditTextPreference
            android:key="preference_name"
            android:title="@string/pref_player_name"
            android:defaultValue="@string/pref_default_player_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
        <ListPreference
            android:key="preference_disks_amount"
            android:title="@string/pref_disks_amount"
            android:entryValues="@array/pref_list_disks_amount"
            android:entries="@array/pref_list_disks_amount"
            android:defaultValue="3" />
        <ListPreference
            android:key="preference_speed_effect"
            android:title="@string/pref_speed_effect"
            android:entries="@array/pref_list_speed_effect_titles"
            android:entryValues="@array/pref_list_speed_effect_values"
            android:defaultValue="100" />
    </PreferenceCategory>
</PreferenceScreen>